# computer-graphics

./: README.md
disc01/: CMakeLists.txt  README.md  filter.cpp  filter.h  image.cpp  image.h  main.cpp
hw0-intro/: CMakeCache.txt  Makefile  triangle_test  triangle_test.cpp
hw0-intro/CGL/: Makefile
hw0-intro/CGL/src/: Makefile
hw1-rasterizer/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SETUP.md  WRITTEN.md  index.html
hw1-rasterizer/CGL/: Makefile
hw1-rasterizer/CGL/include/CGL/: color.h
hw1-rasterizer/CGL/src/: Makefile
hw1-rasterizer/docs/: index.html
hw1-rasterizer/src/: CMakeLists.txt  Makefile  drawrend.cpp  drawrend.h  main.cpp  svg.cpp  svg.h  svgparser.cpp  svgparser.h  texture.cpp  texture.h  transforms.cpp  transforms.h  triangulation.cpp  triangulation.h
hw2-meshedit/: README.md  index.html
hw2-meshedit/docs/: index.md
hw2-meshedit/src/: halfEdgeMesh.h  student_code.cpp
hw3-1-pathtracer/: CMakeLists.txt  README.md
hw3-1-pathtracer/docs/: README.md  REAME.md  index.html
hw3-1-pathtracer/src/: CMakeLists.txt  application.cpp  application.h  bbox.h  bsdf.cpp  bsdf.h  bvh.h  camera.cpp  camera.h  halfEdgeMesh.cpp  halfEdgeMesh.h  main.cpp  meshEdit.cpp  meshEdit.h  mutablePriorityQueue.h  pathtracer.cpp  pathtracer.h  pt.cpp  ray.h  sampler.cpp  sampler.h
hw3-1-pathtracer/src/collada/: collada.cpp  material_info.h  sphere_info.h
hw3-1-pathtracer/src/dynamic_scene/: ambient_light.h  area_light.h  material.h  mesh.cpp  mesh.h  mesh_view.h  scene.cpp  sphere.cpp  sphere.h
hw3-1-pathtracer/src/static_scene/: aggregate.h  environment_light.cpp  environment_light.h  light.cpp  light.h  object.cpp  scene.h  sphere.cpp  sphere.h
hw3-2-pathtracer2/: CMakeLists.txt
hw3-2-pathtracer2/docs/: README.md  index.html
hw3-2-pathtracer2/src/: CMakeLists.txt  application.cpp  application.h  bbox.cpp  bsdf.cpp  bsdf.h  bvh.cpp  camera.cpp  camera.h  halfEdgeMesh.cpp  halfEdgeMesh.h  image.h  intersection.h  main.cpp  part1_code.cpp  part1_code.h  pathtracer.cpp  pathtracer.h  random_util.h  ray.h  sampler.cpp  sampler.h
hw3-2-pathtracer2/src/collada/: collada.cpp  collada.h  light_info.cpp  light_info.h  material_info.cpp  material_info.h  polymesh_info.cpp  polymesh_info.h  sphere_info.cpp
hw3-2-pathtracer2/src/dynamic_scene/: directional_light.h  draw_style.h  environment_light.h  mesh.cpp  point_light.h  scene.h  spot_light.h
hw3-2-pathtracer2/src/misc/: sphere_drawing.cpp  sphere_drawing.h
hw3-2-pathtracer2/src/static_scene/: environment_light.cpp  environment_light.h  light.cpp  object.h  primitive.h  triangle.cpp  triangle.h
hw4-clothsim/: README.md
hw4-clothsim/CGL/: CMakeLists.txt
hw4-clothsim/docs/: README.md
hw4-clothsim/src/: cloth.cpp  cloth.h  clothMesh.h  clothSimulator.cpp  clothSimulator.h  leak_fix.h  main.cpp
hw4-clothsim/src/collision/: plane.cpp  sphere.cpp  sphere.h
hw4-clothsim/src/misc/: file_utils.cpp  sphere_drawing.cpp
p4-clothsim-StevenBirdBrown/: CMakeLists.txt  Dockerfile  README.md
p4-clothsim-StevenBirdBrown/src/: CMakeLists.txt  cloth.cpp  clothSimulator.cpp
p4-clothsim-StevenBirdBrown/src/misc/: file_utils.h  sphere_drawing.h
p4-clothsim-StevenBirdBrown/website/: index.html
